fixed alignment issues

--- a/src/Weather.css
+++ b/src/Weather.css
@@ -54,3 +54,7 @@
 canvas {
   margin: 10px;
 }
+
+.WeatherTemperature {
+  display: flex;
+}
